--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hack Your Life!!
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My First Web</title>
+</head>
+<body>
+    <h1>Hack Your Life!!</h1>
+    <p>Call me JSY</p>
+</body>
+</html>
