--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My First Web</title>
+  <meta charset='UTF-8'>
+  <title>My first web</title>
 </head>
 <body>
-    <h1>Hack Your Life!!</h1>
-    <p>Call me JSY</p>
+  <h1>Hack Your Life!</h1>
+  <p>Call me neo.</p>
 </body>
 </html>
